header and aside added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,40 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BSA</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <title>BSA HTML</title>
 </head>
 <body>
-    <header>header</header>
-    <aside>aside</aside>
-    <section>section</section>
-    <footer>footer</footer>
+    <header>
+        <div class="logo-block">
+            <a href="#">
+                <img src="assets/img/logo.png" alt="Logo" class="logo-img">
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Услуги</a>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Настройки</a></li>
+            </ul>
+        </nav>
+    </header>
+    <aside>
+        <ul>
+            <li><a href="#">Пункт меню #1</a></li>
+            <li><a href="#">Пункт меню #2</a>
+            <li><a href="#">Пункт меню #3</a></li>
+            <li><a href="#">Пункт меню #4</a></li>
+        </ul>
+    </aside>
+    <section>
+        <div class="row">
+            <div class="block"></div>
+            <div class="block"></div>
+            <div class="block"></div>
+        </div>
+    </section>
+    <footer></footer>
 </body>
 </html>
