--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.css">
     <title>BSA HTML</title>
 </head>
 <body>
@@ -24,6 +25,7 @@
             </ul>
         </nav>
     </header>
+
     <aside>
         <ul>
             <li><a href="#">Пункт меню #1</a></li>
@@ -32,13 +34,84 @@
             <li><a href="#">Пункт меню #4</a></li>
         </ul>
     </aside>
+
     <section>
         <div class="row">
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
+            <div class="block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate sit amet ipsum non placerat. Mauris vel pulvinar magna. Cras facilisis turpis sed justo consequat semper at eget quam. Pellentesque vehicula blandit fringilla. Etiam sit amet placerat purus, at pellentesque lacus.</div>
+            <div class="block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate sit amet ipsum non placerat. Mauris vel pulvinar magna. Cras facilisis turpis sed justo consequat semper at eget quam. Pellentesque vehicula blandit fringilla. Etiam sit amet placerat purus, at pellentesque lacus. Ut sit amet massa in est suscipit eleifend. Fusce tincidunt, nisl eget ullamcorper egestas, eros est vehicula nisl, hendrerit blandit magna metus nec lacus. Integer ut turpis laoreet, condimentum nunc a, faucibus purus. Praesent volutpat tristique est ac volutpat. Phasellus id congue justo, a fringilla leo.</div>
+            <div class="block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate sit amet ipsum non placerat. Mauris vel pulvinar magna. Cras facilisis turpis sed justo consequat semper at eget quam. Pellentesque vehicula blandit fringilla. Etiam sit amet placerat purus, at pellentesque lacus. Ut sit amet massa in est suscipit eleifend. Fusce tincidunt, nisl eget ullamcorper egestas, eros est vehicula nisl, hendrerit blandit magna metus nec lacus.</div>
+        </div>
+        <div class="row">
+            <div class="block-notfixed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate sit amet ipsum non placerat. Mauris vel pulvinar magna. Cras facilisis turpis sed justo consequat semper at eget quam. Pellentesque vehicula blandit fringilla. Etiam sit amet placerat purus, at pellentesque lacus. Ut sit amet massa in est suscipit eleifend. Fusce tincidunt, nisl eget ullamcorper egestas, eros est vehicula nisl, hendrerit blandit magna metus nec lacus. Integer ut turpis laoreet, condimentum nunc a, faucibus purus. Praesent volutpat tristique est ac volutpat. Phasellus id congue justo, a fringilla leo. Morbi fermentum tellus a elit porttitor, ac ultrices odio gravida. Etiam tincidunt, mi et auctor congue, dolor ipsum ultrices mi, vel ultricies ipsum massa ac nibh. Etiam hendrerit nunc eget molestie vulputate. Quisque nisl erat, viverra sit amet ultrices vitae, placerat id quam. Aliquam interdum, urna eget dapibus suscipit, urna purus mollis augue, vel hendrerit orci dolor elementum mauris. Duis sit amet quam eu mauris facilisis dapibus.</div>
+            <div class="block-notfixed">Etiam auctor ut sem sed porta. Duis volutpat vehicula lorem, eu tempor eros varius sed. Nunc semper lorem eu metus luctus consectetur. Donec varius dui ut purus commodo, sit amet venenatis metus semper. Nam malesuada, tellus non ultricies auctor, turpis augue consequat odio, sit amet faucibus felis nisl sit amet enim. </div>
+            <div class="block-notfixed">Curabitur pellentesque semper arcu, eget finibus est lobortis nec. Praesent ac urna egestas, rhoncus odio fringilla, porta turpis. Mauris in consectetur nisi. Suspendisse facilisis sagittis mollis. Nulla ultricies ex vel eleifend laoreet. Nunc metus orci, tempor in risus ut, luctus posuere eros. Cras in arcu quis sapien dignissim interdum et eu magna. Curabitur massa dui, aliquet nec porta et, commodo sit amet nulla. In interdum turpis sed leo fermentum ultricies. Nam pulvinar dui non nisl gravida ornare.</div>
+            <div class="block-notfixed">Curabitur pellentesque semper arcu, eget finibus est lobortis nec. Praesent ac urna egestas, rhoncus odio fringilla, porta turpis. Mauris in consectetur nisi. Suspendisse facilisis sagittis mollis. Nulla ultricies ex vel eleifend laoreet. Nunc metus orci, tempor in risus ut, luctus posuere eros. Cras in arcu quis sapien dignissim interdum et eu magna. Curabitur massa dui, aliquet nec porta et, commodo sit amet nulla. In interdum turpis sed leo fermentum ultricies. Nam pulvinar dui non nisl gravida ornare.</div>
+        </div>
+        <div class="row">
+            <div class="block-fixed">Donec at ipsum ut nulla pulvinar semper ut sit amet augue. Proin sit amet diam id tellus accumsan ultricies eget id nisi. Cras convallis nibh non dolor fermentum, at elementum risus sollicitudin.</div>
+            <div class="block-fixed">Sed sodales interdum risus vitae tempus. Nunc molestie quam id nisi commodo, eget placerat tortor cursus. Vestibulum bibendum euismod odio at iaculis. In quam metus, congue non condimentum ac, vestibulum nec nunc. Cras ac nulla hendrerit lacus aliquam mollis.</div>
+            <div class="block-fixed">Nunc ante lorem, rhoncus eget lorem ac, euismod condimentum lorem. Aliquam lacinia, neque sed lacinia tincidunt, sem nisl viverra justo, eu tristique odio augue ut nibh. Ut sit amet elementum sem. Vestibulum nulla urna, mattis vel ligula vitae, consequat gravida lacus. Aliquam gravida sem sit amet massa dapibus rhoncus. Nunc id tempus turpis. Aenean felis ex, imperdiet nec augue quis, imperdiet posuere odio. Cras hendrerit lorem ut tortor placerat elementum. Sed vitae libero in elit feugiat posuere vitae ut nisl.</div>
+            <div class="block-fixed">Donec at ipsum ut nulla pulvinar semper ut sit amet augue. Proin sit amet diam id tellus accumsan ultricies eget id nisi. Cras convallis nibh non dolor fermentum, at elementum risus sollicitudin.</div>
+            <div class="block-fixed">Donec at ipsum ut nulla pulvinar semper ut sit amet augue. Proin sit amet diam id tellus accumsan ultricies eget id nisi. Cras convallis nibh non dolor fermentum, at elementum risus sollicitudin. Sed sodales interdum risus vitae tempus. Nunc molestie quam id nisi commodo, eget placerat tortor cursus. Vestibulum bibendum euismod odio at iaculis. In quam metus, congue non condimentum ac, vestibulum nec nunc. Cras ac nulla hendrerit lacus aliquam mollis.</div>
         </div>
     </section>
-    <footer></footer>
+    <div class="clearfix"></div>
+
+    <footer>
+        <div class="top">
+            <div class="row">
+                <div class="col">
+                    <ul>
+                        <li><a href="#">Column 1-1</a></li>
+                        <li><a href="#">Column 1-2</a></li>
+                        <li><a href="#">Column 1-3</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li><a href="#">Column 2-1</a></li>
+                        <li><a href="#">Column 2-2</a></li>
+                        <li><a href="#">Column 2-3</a></li>
+                        <li><a href="#">Column 2-4</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li><a href="#">Column 3-1</a></li>
+                        <li><a href="#">Column 3-2</a></li>
+                        <li><a href="#">Column 3-3</a></li>
+                        <li><a href="#">Column 3-4</a></li>
+                        <li><a href="#">Column 3-5</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li><a href="#">Column 4-1</a></li>
+                        <li><a href="#">Column 4-2</a></li>
+                        <li><a href="#">Column 4-3</a></li>
+                        <li><a href="#">Column 4-4</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="left-links">
+                <a href="">Link #1</a>
+                <a href="">Link #2</a>
+                <a href="">Link #3</a>
+            </div>
+            <div class="right-icons">
+                <a href="#" target="_blank">
+                    <i class="fa fa-2x fa-twitter-square"></i>
+                </a>
+                <a href="#" target="_blank">
+                    <i class="fa fa-2x fa-facebook-square"></i>
+                </a>
+                <a href="#" target="_blank">
+                    <i class="fa fa-2x fa-google-plus-square"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
